# clip

./: .gitignore  README.md  checkpoint_manager.py  clip.ipynb  clip.py  dataloader.py  dataloader2.py  logger.py  prep_dataset.py  pyproject.toml  setup_cloud_env.sh  setup_local_env.sh  setup_s3_backup.sh  start.sh  train.py
