[project]
name = "clip"
version = "0.0.1"
description = "MK CLIP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "datasets>=2.14.0",
    "tiktoken>=0.5.0"
]
